--- a/h/ho/hou/housevalues.com.html
+++ b/h/ho/hou/housevalues.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the housevalues.com privacy policy that was archived on 2001-04-05.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20010405195335id_/http%3A//housevalues.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the housevalues.com privacy policy that was archived on 2002-06-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020605165857id_/http%3A//housevalues.com/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 
@@ -51,152 +51,86 @@
 
 <center><b>Privacy Statement for HouseValues.com<br>
 
-March 1, 2000</b></center><b>
+August 2001</b></center><b>
 
 </b><br><br>
-
- We, HouseValues.com, have created this privacy statement in order to demonstrate our firm commitment to privacy. The following discloses our information gathering and dissemination practices for this Web site (the "Site").  By accessing our Site, you consent to the collection and use of information by us.  We will use any information we collect from you in accordance with our then-current version of this privacy statement.  If we decide to change our privacy statement, we will post a new statement on our Site and update the statement date.  Therefore, we encourage you to check the date of our privacy statement whenever you visit this Site to check if it has been updated.  <br><br>
-
-<center><b>Information We Collect</b></center><br><br>
-
-<b>Personally Identifying Information</b><br><br>
-
-
-
-
-
-Our Site provides homeowners with various services related to home selling such as estimates of current market value of homes, moving costs, and mortgage or finance costs.  In order to provide these services, we collect information from homeowners and forward it to a local service provider (such as licensed real estate agents or brokers) who uses the homeowner information to prepare an estimate for the service requested.<br><br>
-
-
-
-
-
-If you are a homeowner, we collect personally identifying information, including your name, address, phone number, e-mail address, and information about your home and moving plans.  If you are a licensed real estate agent or broker who is interested in preparing market evaluations and estimated selling price ranges for HouseValues.com, we collect your contact and professional information, including your name, company, address, phone number and e-mail address.  We also collect e-mail addresses from users who register to receive our newsletter, Home Seller Tips, which contains various useful information.  Regardless of whether you are a homeowner or a real estate agent or broker, information that identifies you personally is collected from our Site only if you supply it voluntarily by entering it on our Site.  <br><br>
-
-
-
-<b>E-mail Addresses</b><br><br>
-
-
-
-
-
-We collect e-mails addresses as part of providing services.  Except for customer service purposes, we will not send any e-mails to you unless you request information from us.  We only send our Home Seller Tips e-mail newsletter to homeowners who request the newsletter.  If you have registered to receive our newsletter, you may opt out of receiving future newsletters at any time.  Except as is described in this policy, we will not disclose your email address to any third party without your consent.<br><br>
-
-
-
-<b>Aggregate Information</b><br><br>
-
-
-
-
-
-We collect aggregate information about you and your use of our services.  Such aggregate information includes, without limitation, site traffic, page views, and impressions.  This aggregate information may be correlated to you for our internal use only.  However, we may collect, compile, store, publish, promote, sell, or otherwise disclose or use any and all aggregate information, provided that, such information does not personally identify you.<br><br>
-
-
-
-<b>Cookies</b><br><br>
-
-
-
-We currently use cookies to identify users and customize their experience on our site based on information they give us.
- Cookies are small pieces of information 
-or files that are stored on a user's computer by the Web server through a user's browser for record keeping purposes.  A
- cookie itself is not designed or intended to read any information from your computer (other than the contents of the
-  cookie); rather, it is an identifier used by the Web site that originally placed it your hard drive.  The actual 
-  contents of the cookie information can be retrieved by the same sites Web server in order to personalize, monitor, or 
-  regulate the use of the site. <br><br>
-
-
-
-<center><b>Use of Data</b></center><br><br>
-
-
-
-
-
-Personal information that you share with us is used for various internal purposes, including customer service and for sending you periodic e-mail newsletters (provided you register to receive our newsletter).  As stated above, your personal information is also forwarded to real estate agents or brokers, and other house-related service providers in order to provide you with the services you request.  We only forward your personal information to one real estate agent, broker or other service provider for each type of service you request.  That real estate agent, broker or service provider may contact you via e-mail, telephone or other means at his or her discretion.  We do not regulate how these third parties use your information and are not responsible for removing your information from any third party lists.  Please contact the third party service providers directly to be removed from their lists.<br><br> 
-
-
-
-Except as stated above, we do not disclose, sell, rent, loan, trade or lease any personal information collected at our Site to any other party.  Please note that we reserve the right to disclose your personal information if required to do so by law, or if disclosure is reasonably necessary to comply with legal process, respond to claims, or to protect rights, property or safety of our company, its employees, customers, or the public.<br><br>
-
-
-
-<b><center>Links</center></b><br>
-
-
-
-Our Site provides links to outside service providers such as Amazon.com who may collect customer information for their own use.  We have no ability to control the privacy and data collection practices of these sites.  Please refer to the linked sites for a review of their privacy policies.<br><br>
-
-
-
-<center><b>Security</b></center><br>
-
-We use commercially reasonable efforts to store and maintain personally identifying information to protect it from loss, misuse, alternation or destruction by any unauthorized party.  <br><br>
-
-
-
-<b><center>Choice/Opt-Out</center></b><br>
-
-You may opt-out of receiving communications from us in the future through any of the following options:
-
- 
-
+We, HouseValues.com, have created this privacy statement in order to demonstrate our firm commitment to privacy. The privacy statement discloses our information gathering and dissemination practices for this Web site (the "Site"). By accessing our Site, you consent to the collection and use of information described herein. If we decide to change our privacy statement, we will post a new statement on our Site and update the statement date. Therefore, we encourage you to check the date of our privacy statement whenever you visit this Site to see if it has been updated since your last visit. 
+<br><br>
+<center><b>Information We Collect</b></center>
+<br><br>
+<b>Personally Identifying Information</b>
+<br><br>
+Our Site provides homeowners with various services related to home selling such as estimates of current market value of homes, moving costs, and mortgage or finance costs. In order to provide these services, we collect information from homeowners and forward it to a local service provider (such as licensed real estate agents or brokers) who uses the homeowner information to prepare an estimate for the service requested. 
+<br><br>
+If you are a homeowner, we collect personally identifying information, including your name, address, phone number, e-mail address, and information about your home and moving plans. If you are a licensed real estate agent or broker who is interested in preparing market evaluations and estimated selling price ranges for HouseValues.com, we collect your contact and professional information, including your name, company, address, phone number and e-mail address. We also collect e-mail addresses from users who register to receive our newsletter, Home Seller Tips, which contains various useful information. Regardless of whether you are a homeowner or a real estate agent or broker, information that identifies you personally is collected from our Site only if you supply it voluntarily by entering it on our Site. 
+<br><br>
+<b>E-mail Addresses</b>
+<br><br>
+We collect e-mail addresses as part of providing our services. Except for customer service purposes, we will not send any e-mails to you unless you request information from us. We only send our Home Seller Tips e-mail newsletter to homeowners who request the newsletter. If you have registered to receive our newsletter, you may opt out of receiving future newsletters at any time.  Please see the opting-out [LINK] section below.  Except as is described in this policy, we will not disclose your email address to any third party without your consent.
+<br><br>
+<b>Aggregate Information</b>
+<br><br>
+We collect aggregate information about you and your use of our services. Such aggregate information includes, without limitation, site traffic, page views, and impressions. This aggregate information may be correlated to you for our internal use only. However, we may collect, compile, store, publish, promote, sell, or otherwise disclose or use any and all aggregate information, provided that, such information does not personally identify you.
+<br><br>
+<b>Cookies</b>
+<br><br>
+We currently use cookies to identify users and customize their experience on our site based on information they give us. Cookies are small pieces of information or files that are stored on a user's computer by the Web server through a user's browser for record keeping purposes. A cookie itself is not designed or intended to read any information from your computer (other than the contents of the cookie); rather, it is an identifier used by the Web site that originally placed it your hard drive. The actual contents of the cookie information can be retrieved by the same site's Web server in order to personalize, monitor, or regulate the use of the site. 
+<br><br>
+<b>Use of Data</b>
+<br><br>
+Personal information that you share with us is used for various internal purposes, including customer service and for sending you periodic e-mail newsletters (provided you register to receive our newsletter). As stated above, your personal information is also forwarded to real estate agents or brokers, and other house-related service providers in order to provide you with the services you request. We only forward your personal information to one real estate agent, broker or other service provider for each type of service you request. If the real estate agent, broker or other service provider is unable to fulfill your request in a reasonable time, we may forward your information to an alternate service provider to ensure that your request is fulfilled.  In either case, that real estate agent, broker or service provider may contact you via e-mail, telephone or other means at his or her discretion. We do not regulate how these third parties use your information and are not responsible for removing your information from any third party lists. Please contact the third party service providers directly to be removed from their lists.
+<br><br>
+Except as stated above, we do not disclose, sell, rent, loan, trade or lease any personal information collected at our Site to any other party. 
+<br><br>
+Please note that we reserve the right to disclose your personal information if required to do so by law, or if disclosure is reasonably necessary to comply with legal process, respond to claims, or to protect rights, property or safety of our company, its employees, customers, or the public.
+<br><br>
+In addition, information about our users, including personally identifiable information, may be disclosed as part of any merger, acquisition, debt financing, sale of company assets, as well as in the unlikely event of an insolvency, bankruptcy or receivership in which personally identifiable information could be transferred to third parties as one of the business assets of the company.
+<br><br>
+<b>Links</b>
+<br><br>
+Our Site provides links to outside service providers such as Amazon.com who may collect customer information for their own use. We have no ability to control the privacy and data collection practices of these sites. Please review the privacy policies of any linked sites you visit.  
+<br><br>
+<b>Security</b>
+<br><br>
+We use commercially reasonable efforts to store and maintain personally identifying information to protect it from loss, misuse, alternation or destruction by any unauthorized party. 
+<br><br>
+<b>Choice/Opt-Out</b>
+<br><br>
+You may opt-out of receiving communications from us in the future through any of the following options: 
 <ol>
-
-<li>to unsubscribe to the Home Seller Tips newsletter visit: <a href="http://www.housevalues.com/remove.cfm">http://www.housevalues.com/remove.cfm</a>
-
-</li><li>email <a href="info@housevalues.com">info@housevalues.com</a>
-
-</li><li>call the following telephone number: 425-454-0088</li></ol>
-
-
-
-<b><center>Children</center></b><br>
-
-
-
-
-
-We do not intend, and this site is not designed, to collect personal information from children under the age of 13.  If you are under 13 years old, you should not register for our services.<br><br>
-
-
-
-<b><center>Access to Your Information</center></b><br>
-
-HouseValues.com gives users the following options for changing and modifying information previously provided:<br><br>
-
-
-
-
-
-
-
-<ol> 
-
-<li>email <a href="mailto:info@housevalues.com">info@housevalues.com</a>
-
-</li><li>call the following telephone number: 425-454-0088</li></ol>
-
-
-
-<b><center>Questions and Concerns</center></b>
-
-
-
-If you have any questions about this privacy statement, the practices of this Site, or your dealings with this Site, please contact:<br><br>
-
-<i>Customer Service<br>
-
-HouseValues.com<br>
-
-15 Lake Bellevue Drive, Suite 202<br>
-
-Bellevue, WA 98005<br>
-
-<a href="mailto:info@housevalues.com">info@housevalues.com</a></i><br><br>
-
+<li>to unsubscribe to the Home Seller Tips newsletter visit: <a href="http://www.housevalues.com/remove.php" target="_new">http://www.housevalues.com/remove.php</a></li>
+<li>email homesellerinfo@housevalues.com</li>
+<li>call the following telephone number: 425-454-0088</li>
+</ol>
+<br><br>
+<b>Children</b>
+<br><br>
+We do not intend, and this site is not designed, to collect personal information from children under the age of 13. If you are under 13 years old, you should not register for our services.
+<br><br>
+<b>Access to Your Information</b>
+<br><br>
+HouseValues.com gives users the following options for changing and modifying information previously provided:
+<ol>
+<li>email homesellerinfo@housevalues.com</li>
+<li>call the following telephone number: 425-454-0088</li>
+</ol>
+<br>
+<br>
+<b>Questions and Concerns</b>
+<br>
+<br>
+If you have any questions about this privacy statement, the practices of this Site, or your dealings with this Site, please contact:
+<br>
+<br>
+Customer Service
+<br>
+HouseValues.com
+<br>
+15 Lake Bellevue Drive, Suite 202
+<br>
+Bellevue, WA 98005
+<br>
+<a href="mailto:homesellerinfo@housevalues.com">homesellerinfo@housevalues.com</a>
 
 
 </td></tr></tbody></table></center><br><br>
