--- a/f/fr/fre/freesaver.com.html
+++ b/f/fr/fre/freesaver.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the freesaver.com privacy policy that was archived on 2001-12-01.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011201200352id_/http%3A//freesaver.com/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the freesaver.com privacy policy that was archived on 2002-06-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020605170220id_/http%3A//freesaver.com/privacy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 <title>Privacy Policy</title>
@@ -35,7 +35,64 @@ We log statistical information about browsers, operating systems, and referring 
 </tbody></table><p>
 
 <br><br><br><br><br>
-</p><p><a href="http://rd1.hitbox.com/rd?acct=WQ590818DIDD94EN0&amp;p=s"><img src="http://w128.hitbox.com/Hitbox?l=y&amp;hb=WQ590818DIDD94EN0&amp;l=e&amp;cd=1&amp;n=privacy" height="62" width="88" alt="HitBox" border="0"></a><!-- END WEBSIDESTORY CODE  -->
+
+
+<br></p><p><br>
+<!-- START OF WEBTRENDS LIVE TAG -->
+<!-- Copyright 2001 NetIQ Corporation -->
+<!--  For privacy concerns, check our Privacy Policy at http://www.webtrendslive.com/privacy_policy.htm -->
+<script language="JavaScript">
+<!--
+// Modification of this code is not allowed and will permanently disable your account!
+// SiteName:  Freesaver.Com
+function wtl_Tag4_120467()
+{
+	function D8( d)
+	{
+		var fwd=0, seed= new Date('01/01/2000'), key= "0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz";
+		var s= key.charAt( d.getFullYear()-2000)+key.charAt( d.getMonth()+1)+key.charAt( d.getDate());
+		s+= key.charAt( d.getHours())+key.charAt( d.getMinutes())+key.charAt( d.getSeconds());
+		while( seed.getDay()!=fwd) seed= new Date(seed.getTime() + 86400000);
+		var w= Math.floor( (d.getTime()-(seed.getTime()+86400000)) / 604800000 );
+		s+= key.charAt( (w-(w%16))/16 );
+		s+= key.charAt( w%16);
+		return s;
+	}
+
+	var t = new Date();
+	var W="tagver=4&si=120467&fw=0&bn=11";
+	W+="&tz="+escape(t.getTimezoneOffset());
+	W+="&ch="+escape(t.getHours());
+	W+="&cl="+escape(D8(t));
+	W+="&ti="+escape(document.title);
+	W+="&url="+escape(window.document.URL);
+	W+="&rf="+escape(window.document.referrer);
+	W+="&js=Yes";
+	W+="&ul="+(navigator.appName=="Netscape"?navigator.language:navigator.userLanguage);
+	if(typeof(screen)=="object")
+	{
+	W+="&sr="+screen.width+"x"+screen.height;
+	W+="&cd="+screen.colorDepth;
+	W+="&jo="+(navigator.javaEnabled()?"Yes":"No");
+	}
+	
+	
+	document.write('<A TARGET="_blank" HREF="http://www.webtrendslive.com/redirect.asp?siteID=120467">');
+	document.write('<IMG ID="WTL_TAG" BORDER="0" WIDTH="100" HEIGHT="30" ALT="This Site Tracked by WebTrendsLive." SRC="http://p.wtlive.com/S120467/button4.asp?'+W+'">');
+	document.write('</A>');
+	
+}	
+
+wtl_Tag4_120467();
+//-->
+</script><a target="_blank" href="http://www.webtrendslive.com/redirect.asp?siteID=120467"><img id="WTL_TAG" border="0" width="100" height="30" alt="This Site Tracked by WebTrendsLive." src="http://p.wtlive.com/S120467/button4.asp?tagver=4&amp;si=120467&amp;fw=0&amp;bn=11&amp;tz=0&amp;ch=19&amp;cl=K2JJwhA&amp;ti=Privacy%20Policy&amp;url=https%3A//web.archive.org/web/20020605170220id_/http%253A//freesaver.com/privacy.htm&amp;rf=&amp;js=Yes&amp;ul=en-US&amp;sr=800x600&amp;cd=24&amp;jo=No"></a>
+<noscript>
+<A TARGET="_blank" HREF="http://www.webtrendslive.com/redirect.asp?siteID=120467">
+<IMG BORDER="0" WIDTH="100" HEIGHT="30" ALT="This Site Tracked by WebTrendsLive." SRC="http://p.wtlive.com/S120467/button4.asp?tagver=4&si=120467&fw=0&bn=11&js=No&"></A>
+</noscript>
+<!-- END OF WEBTRENDS LIVE TAG -->
+</p><p align="center">
+</p><p><!-- BEGIN WEBSIDESTORY --><a href="http://rd1.hitbox.com/rd?acct=WQ590818DIDD94EN0&amp;p=s" target="_blank"><img height="62" alt="Hitbox" src="http://w128.hitbox.com/Hitbox?l=y&amp;hb=WQ590818DIDD94EN0&amp;l=e&amp;cd=1&amp;n=privacy" width="88" border="0"></a><br></p><p><br>
 </p></center>
 
 
