--- a/o/oc/oct/octafind.com.html
+++ b/o/oc/oct/octafind.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the octafind.com privacy policy that was archived on 2001-12-04.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011204194426id_/http%3A//www.octafind.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the octafind.com privacy policy that was archived on 2002-06-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020605183953id_/http%3A//octafind.com/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 <title>OctaFind - Privacy Policy</title>
@@ -36,8 +36,8 @@ function MM_swapImage() { //v3.0
 <body bgcolor="#FFFFFF" text="#000000" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0" onload="MM_preloadImages('images/but-search_.gif','images/go_find_it_.gif','images/give_me_the_heat_.gif')" link="#FF2D2D" vlink="#FF2D2D" alink="#FF2D2D">
 <table width="656" border="0" cellspacing="0" cellpadding="0">
   <tbody><tr> 
-    <td valign="bottom" background="images/menu-bgr.gif" bgcolor="#EEEEE9" width="719">
-    <img src="images/spacer.gif" width="1" height="54"><a href="octabar/index.html"><img src="images/menu-2.gif" width="157" height="21" border="0"></a><a href="privacy.html"><img src="images/menu-3.gif" width="125" height="21" border="0"></a><a href="adv/index.html"><img src="images/menu-4.gif" width="148" height="21" border="0"></a><a href="contact/index.html"><img src="images/menu-5.gif" width="148" height="21" border="0"></a><a href="adv/index.html"><img src="images/menu-6.gif" width="129" height="21" border="0"></a></td>
+    <td valign="bottom" background="images/menu-bgr.gif" bgcolor="#EEEEE9" width="719" align="right">
+    <img src="images/spacer.gif" width="1" height="54"><img src="images/spacer.gif" width="1" height="54"><a href="http://www.octafind.com/contact/index.html"><img src="images/menu-5.gif" width="148" height="21" border="0"></a><a href="http://www.octafind.com/adv/index.html"><img src="images/menu-6.gif" width="129" height="21" border="0"></a></td>
   </tr>
   <tr> 
     <td bgcolor="#CECCE0" background="images/pas-bgr.gif" width="719">
@@ -48,7 +48,8 @@ function MM_swapImage() { //v3.0
       <table width="709" border="0" cellspacing="0" cellpadding="0">
         <tbody><tr>
           <td bgcolor="#FFFFFF" width="138">
-          <img src="images/logo-sub.gif" width="138" height="52"></td>
+          <a href="http://www.octafind.com/">
+          <img src="images/logo-sub.gif" width="138" height="52" border="0"></a></td>
           <td bgcolor="#C7C5DC" width="57">
           <img src="images/panel-prechod.gif" width="57" height="52"></td>
           <td bgcolor="#716CA6" background="images/pasik-bgr.gif" width="514">
@@ -66,12 +67,13 @@ function MM_swapImage() { //v3.0
   <tbody><tr> 
     <td class="left" valign="top" width="106"> 
       <h3>menu</h3>
-      <p><a href="./">&gt; home</a><br>
-        <a href="octabar/">&gt; IE toolbar</a><br>
-        <a href="privacy.html">&gt; privacy policy</a><br>
-        <a href="logon/">&gt; logon</a><br>
-        <a href="contact/">&gt; contact</a><br>
-        <a href="adv/">&gt; list site</a><br>
+      <p><a href="http://www.octafind.com/">&gt; Home</a><br>
+        <a href="http://www.octafind.com/adv/">&gt; List Site</a><br>
+        <a href="http://www.octafind.com/logon/">&gt; Adv. Logon</a><br>
+      <a href="http://www.octafind.com/integrated.html">&gt; Integrated</a><br>
+        <a href="http://www.octafind.com/octabar/">&gt; IE toolbar</a><br>
+        <a href="http://www.octafind.com/privacy.html">&gt; Privacy Policy</a><br>
+      <a href="http://www.octafind.com/contact/">&gt; Contact</a><br>
         &nbsp;</p>
       </td>
     <td class="middle" valign="top" width="539"> 
@@ -80,22 +82,22 @@ function MM_swapImage() { //v3.0
 data about our users except in specific instances, such as if you choose to 
 advertise with our service. </font> </i> </p>
       <p>&nbsp;</p>
-<p><font size="3">OctaFind provides a number of search related services.&nbsp; As such, we 
+<p><font size="2">OctaFind provides a number of search related services.&nbsp; As such, we 
 follow a unified information handling practice and make every effort to disclose 
 our use of information.&nbsp; This privacy policy is an example of that effort.</font></p>
 <p>&nbsp;</p>
-<p><b><font size="3"><br>
+<p><b><font size="2"><br>
 What is covered by this privacy policy?</font></b></p>
-<p><font size="3">This privacy policy covers information collected and stored by OctaFind.&nbsp; 
+<p><font size="2">This privacy policy covers information collected and stored by OctaFind.&nbsp; 
 Please note that as a search service provider, OctaFind links to third party web 
 sites and may provide search services for third party web sites.&nbsp; These 
 third party web sites are not covered under this privacy policy and OctaFind is 
 not responsible for the content or information collection policies of such third 
 parties.</font></p>
 <p>&nbsp;</p>
-<p><b><font size="3"><br>
+<p><b><font size="2"><br>
 Third party banner ads</font></b></p>
-<p><font size="3">OctaFind may use third party companies to serve some or all of its banner advertisements.&nbsp; 
+<p><font size="2">OctaFind may use third party companies to serve some or all of its banner advertisements.&nbsp; 
 As these companies are not part of OctaFind, they are not bound by this privacy 
 policy.&nbsp; You may find more information about some of these companies and choose to 
 opt out of their information collection mechanisms by visiting the
@@ -105,25 +107,25 @@ provide an opt-out mechanism.</font></p>
 
 <p>&nbsp;</p>
 
-<p><b><font size="3"><br>
+<p><b><font size="2"><br>
 What information does OctaFind collect and how is it used?</font></b></p>
 
-<p><font size="3">OctaFind collects at least three types of distinct data, (1) clickstream, (2) 
+<p><font size="2">OctaFind collects at least three types of distinct data, (1) clickstream, (2) 
 cookie data and (3) contact and personally identifiable information.</font></p>
 <p>&nbsp;</p>
-<p><font size="3">(1) <i>Clickstream data</i><br>
+<p><font size="2">(1) <i>Clickstream data</i><br>
 OctaFind collects data about the flow of traffic into, through, and out of our 
 web site.&nbsp; Clickstream data is not personally identifiable.&nbsp; OctaFind 
 may share clickstream data with selected third parties.</font></p>
 <p>&nbsp;</p>
-<p><font size="3">(2) <i>Cookies</i><br>
+<p><font size="2">(2) <i>Cookies</i><br>
 Like many web sites, OctaFind may use cookies to track online behavior 
 information.&nbsp; The cookies sent by OctaFind are not readable by any 
 third-party sites and do not contain any personally identifiable information.&nbsp; 
 We may share cookie data with selected third parties.</font></p>
 <p>&nbsp;</p>
 
-<p><font size="3">(3) <i>Contact information and personally identifiable information</i><br>
+<p><font size="2">(3) <i>Contact information and personally identifiable information</i><br>
 OctaFind can only obtain access to your contact or personally identifiable 
 information if you choose to (a) become an advertiser with us, (b) submit a 
 feedback or other form and provide such information, (c) in connection with a contest or 
@@ -134,34 +136,34 @@ this type of disclosure at any time by contacting OctaFind.</font></p>
 
 <p>&nbsp;</p>
 
-<p><b><font size="3"><br>
+<p><b><font size="2"><br>
 Is the data you provide to OctaFind stored securely?</font></b></p>
 
-<p><font size="3">We have taken measures to ensure the security of your personal information.&nbsp; 
+<p><font size="2">We have taken measures to ensure the security of your personal information.&nbsp; 
 However, security of data is an ever evolving field.&nbsp; As such, please treat 
 any communication with OctaFind as non-confidential and do not submit 
 confidential information through our feedback forms or other mechanisms.</font></p>
 
 <p>&nbsp;</p>
 
-<p><b><font size="3"><br>
+<p><b><font size="2"><br>
 How do I contact OctaFind if I have a question about this privacy policy 
 or any information about me stored or collected by OctaFind?</font></b></p>
 
-<p><font size="3">If you have questions about this privacy policy or about our collection of 
+<p><font size="2">If you have questions about this privacy policy or about our collection of 
 information, you may contact us at:</font></p>
 
 <p>&nbsp;</p>
 
-<p><font size="3">OctaFind<br>
+<p><font size="2">OctaFind<br>
 ATTN:&nbsp; Privacy Policy Coordinator<br>
-155 Marine St.<br>
+100 Adams Blvd.<br>
 Farmingdale, NY 11735<br>
-E-mail:&nbsp; </font> <a href="mailto:privacy@octafind.com"><font size="3">privacy@octafind.com</font></a></p>
+E-mail:&nbsp; </font> <a href="mailto:privacy@octafind.com"><font size="2">privacy@octafind.com</font></a></p>
 
 <p>&nbsp;</p>
 
-<p><font size="3">This policy may be periodically revised at the discretion of OctaFind.&nbsp; 
+<p><font size="2">This policy may be periodically revised at the discretion of OctaFind.&nbsp; 
 You are responsible for notifying us within 14 days if you do not agree with any 
 changes to this policy and request to have any personally identifiable 
 information stored at OctaFind deleted.&nbsp; Failure to notify us within 14 
@@ -169,7 +171,8 @@ days signals your agreement with the revised privacy policy.</font></p>
 
 <p>&nbsp;</p>
 
-<p><font size="3">This privacy policy was last updated on <b>July 18, 2001</b>.</font></p>
+<p><font size="2">This privacy policy was last updated on <b>April 29, 2002.&nbsp; </b>
+Previous to last revision on<b> July 18, 2001</b>.</font></p>
 
       <p> <br>
       </p>
@@ -184,9 +187,10 @@ days signals your agreement with the revised privacy policy.</font></p>
   </tr>
   <tr> 
     <td width="709"> 
-      <p class="copyright">Copyright © 2001 SiteUp Networks, Inc.</p>
+      <p class="copyright">Copyright © 2001-2002 SiteUp</p>
     </td>
   </tr>
 </tbody></table>
+<p class="copyright">&nbsp;</p>
 
 </body></html>
