--- a/e/el/ele/elecard.com.html
+++ b/e/el/ele/elecard.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the elecard.com privacy policy that was archived on 2001-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011216225712id_/http%3A//elecard.com/privacy_stmt.shtml) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the elecard.com privacy policy that was archived on 2002-06-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020605193319id_/http%3A//www.elecard.com/privacy_stmt.shtml) for the most accurate reproduction.-->
 
 <html><head>
 <title>Elecard | Privacy Statement</title>
@@ -206,8 +206,8 @@ process that information in databases in the United  States.
 <br>
 
 <center><font face="Arial, Helvetica, sans-serif">
-<a href="/products/">Products</a> |
-<a href="/service/">Service</a> | 
+<a href="/products/index.shtml">Products</a> |
+<a href="/service/index.shtml">Service</a> | 
 <a href="/download/">Download</a> |
 <a href="/about/">About Elecard</a> |
 <a href="/">Home</a>
@@ -226,7 +226,7 @@ process that information in databases in the United  States.
 <br>
 
 <center><font face="Arial, Helvetica, sans-serif" size="-1">
-Copyright © 1996-2001 Elecard, Inc. All rights reserved.<br>
+Copyright © 1996-2002 Elecard, Inc. All rights reserved.<br>
 <a href="mailto:webmaster@elecard.com">webmaster@elecard.com</a><br>
 <br>
 <a target="_top" href="http://y.extreme-dm.com/s/?tag=gregory1"><img name="im" src="http://y0.extreme-dm.com/i/" height="38" border="0" width="41" alt=""></a> 
