--- a/t/th/the/thelion.com.html
+++ b/t/th/the/thelion.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the thelion.com privacy policy that was archived on 2001-12-12.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011212084622id_/http%3A//thelion.com/home/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the thelion.com privacy policy that was archived on 2002-06-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020605225401id_/http%3A//www.thelion.com/home/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 <title>TheLion.com Trader's Network</title>
