zoomerang.com (archived on 2002-06-06)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 6521,
  "classifier_probability": 0.98,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "very_confusing",
  "flesch_kincaid": 13.89,
  "homepage_snapshot_redirected_domain": "zoomerang.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20020124014303id_/http://zoomerang.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20020124014303id_/http%3A//zoomerang.com",
  "interval": "2002_A",
  "link_text": "Privacy/Security",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "zoomerang.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20020606135522id_/http%3A//zoomerang.com/privacy/index.html",
  "policy_title": "Zoomerang | Privacy / Security",
  "policy_url": "zoomerang.com/privacy/index.html",
  "sha1": "ccf574dd9b5f2a1ad6615f613c2deb62b7dfdd8d",
  "simhash": 2932387925770712781,
  "simhash_updated": true,
  "site_hostname": "zoomerang.com",
  "site_url": "http://zoomerang.com",
  "smog": 17.01,
  "strict_updated": true,
  "timestamp": "20020606135522",
  "word_count": 983,
  "year": 2002
}

--- a/z/zo/zoo/zoomerang.com.html
+++ b/z/zo/zoo/zoomerang.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the zoomerang.com privacy policy that was archived on 2001-12-04.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011204212745id_/http%3A//www.zoomerang.com/privacy/index.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the zoomerang.com privacy policy that was archived on 2002-06-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020606135522id_/http%3A//zoomerang.com/privacy/index.html) for the most accurate reproduction.-->
 
 <html><head>
 <title>Zoomerang | Privacy / Security</title>
@@ -140,7 +140,7 @@ function imgOff(imgName) {
 			</p><p>
 			<u>Changes to this Privacy Policy</u>
 			</p></font><p><font size="-1" face="Arial, Helvetica, Sans-serif">
-			If Zoomerang wishes to change this policy, it will publish changes on this Web site before those changes will take effect. Zoomerang will also notify users of changes to this policy via electronic mail. As always, if you do not agree with Zoomerang's privacy policy, you have the option of requesting that we delete your personally identifiable information from the site. For more information policies, see our <a href="#" onclick="window.open('../join/terms-of-agreement.html','termswindow','menubar=no,toolbar=no,location=no,directories=no,status=no,scrollbars=yes,resizable=no,copyhistory=no,width=400,height=400'); return false;" onfocus="blur()">terms of agreement</a>.
+			If Zoomerang wishes to change this policy, it will publish changes on this Web site before those changes will take effect. Zoomerang will also notify users of changes to this policy via electronic mail. As always, if you do not agree with Zoomerang's privacy policy, you have the option of requesting that we delete your personally identifiable information from the site. For more information policies, see our <a href="#" onclick="window.open('../join/terms-of-agreement.html','termswindow','menubar=no,toolbar=no,location=no,directories=no,status=no,scrollbars=yes,resizable=1,copyhistory=no,width=400,height=400'); return false;" onfocus="blur()">terms of agreement</a>.
 
 			</font></p></td>
 				<td valign="top"></td>
