tasteofhome.com (archived on 2002-06-07)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "foodandrecipes",
  "char_count": 3725,
  "classifier_probability": 0.89,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.74,
  "homepage_snapshot_redirected_domain": "tasteofhome.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20020401185300id_/http://www.tasteofhome.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20020401185300id_/http%3A//tasteofhome.com",
  "interval": "2002_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "tasteofhome.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20020607091200id_/http%3A//www.tasteofhome.com/shared/pages/privacy.asp",
  "policy_title": "Reiman_Privacy_Policy",
  "policy_url": "tasteofhome.com/shared/pages/privacy.asp",
  "sha1": "33aaac69f2a440fb0a61eee0dcf6da8003edbb8e",
  "simhash": 11050815725405325824,
  "simhash_updated": false,
  "site_hostname": "tasteofhome.com",
  "site_url": "http://tasteofhome.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20020607091200",
  "word_count": 608,
  "year": 2002
}

--- a/t/ta/tas/tasteofhome.com.html
+++ b/t/ta/tas/tasteofhome.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the tasteofhome.com privacy policy that was archived on 2001-12-01.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011201162359id_/http%3A//tasteofhome.com/shared/pages/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the tasteofhome.com privacy policy that was archived on 2002-06-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020607091200id_/http%3A//www.tasteofhome.com/shared/pages/privacy.asp) for the most accurate reproduction.-->
 
 <html><head>
 		<meta http-equiv="content-type" content="text/html;charset=iso-8859-1">
@@ -188,7 +188,7 @@ CSInit[CSInit.length] = new Array(CSPreloadImage,/*URL*/ 'Images/ReturnC2.jpg');
 
 </td></tr><!--msnavigation--></tbody></table>
 
-<p align="center"><a href="">Back</a> | <a href="http://tasteofhome.com">Home</a><br><br></p>
+<p align="center"><a href="">Back</a> | <a href="http://www.tasteofhome.com">Home</a><br><br></p>
 
 
 
