--- a/t/th/tho/thomasville.com.html
+++ b/t/th/tho/thomasville.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the thomasville.com privacy policy that was archived on 2001-12-04.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011204001630id_/http%3A//www3.thomasville.com/Home/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the thomasville.com privacy policy that was archived on 2002-06-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020607120816id_/http%3A//www3.thomasville.com/Home/privacy.asp) for the most accurate reproduction.-->
 
 <html><head>
   <title>Thomasville Furniture Ind. - Privacy Policy</title>
@@ -58,11 +58,11 @@
   <!--- INSERT Body copy here --->
 <p><b>Thomasville promises not to sell, rent or give your name to any third parties.  It's that simple.</b>  Our lawyers asked us to also point out the following:</p>
  
-<p>This Privacy Policy Statement sets forth the privacy policy pertaining to this Site, http://www.thomasville.com, and all sites of the affiliates of Thomasville Furniture Industries ("Thomasville") which are linked to this Site (collectively, the "Sites").  By using any Site, you are agreeing to the terms set forth in this Privacy Policy Statement.  For other terms and conditions that apply to your use of the Sites, please review our Legal Statement.</p>
+<p>This Privacy Policy Statement sets forth the privacy policy pertaining to this Site, http://www.thomasville.com, and all sites of the affiliates of Thomasville Furniture Industries ("Thomasville") which are linked to this Site (collectively, the "Sites"). By using any Site, you are agreeing to the terms set forth in this Privacy Policy Statement. For other terms and conditions that apply to your use of the Sites, please review our Legal Statement.</p>
 
-<p>For purposes of this Privacy Policy Statement, "Personal Information" means any information by which you can be personally identified, and includes your name, your address, your telephone number, your e-mail address and the like.  Most Sites do not require that you submit Personal Information to Thomasville.  However, some Sites may request Personal Information in order to help Thomasville serve you more effectively.  Thomasville collects Personal Information only when you voluntarily submit such Personal Information to us, such as when placing a product order through a Site, when entering a contest, and so on.</p>
+<p>For purposes of this Privacy Policy Statement, "Personal Information" means any information by which you can be personally identified, and includes your name, your address, your telephone number, your e-mail address and the like. Most Sites do not require that you submit Personal Information to Thomasville. However, some Sites may request Personal Information in order to help Thomasville serve you more effectively. Thomasville collects Personal Information only when you voluntarily submit such Personal Information to us, such as when placing a product order through a Site, when entering a contest, and so on.</p>
 
-<p>For each visitor to the Sites, our web servers automatically recognize only information regarding the visitor's domain name (or that of the visitor's access provider) and e-mail address.  Regardless of the purpose for which it is submitted, it is Thomasville's policy to maintain all Personal Information as confidential, and to use such Personal Information only for the following purposes:</p>
+<p>For each visitor to the Sites, our web servers automatically recognize only information regarding the visitor's domain name (or that of the visitor's access provider) and e-mail address. Regardless of the purpose for which it is submitted, it is Thomasville's policy to maintain all Personal Information as confidential, and to use such Personal Information only for the following purposes:</p>
 
 <ul>
 <li> for the specific purpose for which it was volunteered (for example, to complete a product purchase, to enter a contest, to answer an email, etc.);
@@ -71,7 +71,7 @@
 </li><li> to notify our visitors of updates to the Sites.
 </li></ul>
 
-<p>It is Thomasville's policy to keep Personal Information only for so long as needed for such purposes. Thomasville does not sell, rent or otherwise distribute to third parties Personal Information about its customers or visitors to the Sites.  At any time, you may obtain a summary of the Personal Information on record with Thomasville which has been collected about you via this Site.  Except for the Personal Information we need to complete your purchase of products, you may request at any time that Thomasville dispose of any or all Personal Information about you.  In addition, at any time you may request (i) that Thomasville correct any such Personal Information; or (ii) that such Personal Information be removed from Thomasville's marketing databases. To make any request described above, either:</p>
+<p>It is Thomasville's policy to keep Personal Information only for so long as needed for such purposes. Thomasville does not sell or rent to third parties Personal Information about its customers or visitors to the Sites. At any time, you may obtain a summary of the Personal Information on record with Thomasville which has been collected about you via this Site. Except for the Personal Information we need to complete your purchase of products, you may request at any time that Thomasville dispose of any or all Personal Information about you. In addition, at any time you may request (i) that Thomasville correct any such Personal Information; or (ii) that such Personal Information be removed from Thomasville's marketing databases. To make any request described above, either: </p>
 
 <table border="0">
 <tbody><tr>
@@ -90,7 +90,7 @@
 
 <p><b>Please be sure to provide your exact e-mail address, name, address and/or telephone number(s) so that we can handle your request correctly.</b></p>
 
-<p>Thomasville reserves the right, at its discretion, to change, modify, add, or remove portions of this Privacy Policy Statement at any time.  You should check this page periodically for changes.  Your continued use of this Site following the posting of changes to this Privacy Policy Statement will mean that you accept those changes.</p>
+<p>Thomasville reserves the right, at its discretion, to change, modify, add, or remove portions of this Privacy Policy Statement at any time. You should check this page periodically for changes. Your continued use of this Site following the posting of changes to this Privacy Policy Statement will mean that you accept those changes.</p>
 
   <br><br><br>
   </td>
@@ -109,7 +109,7 @@
 	<a href="http://www3.thomasville.com/Home/privacy.asp" class="copyright">Privacy Policy</a></td>
   </tr>
   <tr>
- 	<td colspan="2" align="right"><span class="copyright">© Thomasville Furniture Industries, Inc., 2001</span></td>
+ 	<td colspan="2" align="right"><span class="copyright">© Thomasville Furniture Industries, Inc., 2002</span></td>
   </tr>
 </tbody></table>
 
