liweddings.com (archived on 2002-06-07)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 8057,
  "classifier_probability": 0.87,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "very_confusing",
  "flesch_kincaid": 15.84,
  "homepage_snapshot_redirected_domain": "liweddings.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20020330100711id_/http://liweddings.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20020330100711id_/http%3A//liweddings.com",
  "interval": "2002_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "liweddings.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20020607145113id_/http%3A//liweddings.com/privacy.asp",
  "policy_title": "LONG ISLAND WEDDINGS \u2122 - Nassau, Suffolk, Queens, Manhattan, NYC, Brooklyn, Westchester",
  "policy_url": "liweddings.com/privacy.asp",
  "sha1": "0840bef8a7c37d7f56b879c0999adcedb49e06d4",
  "simhash": 14091038796376366872,
  "simhash_updated": false,
  "site_hostname": "liweddings.com",
  "site_url": "http://liweddings.com",
  "smog": 18.42,
  "strict_updated": false,
  "timestamp": "20020607145113",
  "word_count": 1234,
  "year": 2002
}

--- a/l/li/liw/liweddings.com.html
+++ b/l/li/liw/liweddings.com.html
@@ -1,8 +1,8 @@
-<!--The following is the downloaded HTML source of the liweddings.com privacy policy that was archived on 2001-12-14.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011214150344id_/http%3A//liweddings.com/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the liweddings.com privacy policy that was archived on 2002-06-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020607145113id_/http%3A//liweddings.com/privacy.asp) for the most accurate reproduction.-->
 
 <html><head>
-<title>LONG ISLAND WEDDINGS - Nassau, Suffolk, Queens, Manhattan, NYC, Brooklyn, Westchester</title>
+<title>LONG ISLAND WEDDINGS ™ - Nassau, Suffolk, Queens, Manhattan, NYC, Brooklyn, Westchester</title>
 <meta name="KeyWords" content="LONG ISLAND WEDDINGS, weddings, bride, groom,
 long island, bakeries, balloons, decorations, bands, bridal gowns, bridal
 shows, calligraphy, catering, ceremony locations, consultants, cosmetic
@@ -17,37 +17,36 @@ wedding easy! Enter our online contest, post your engagement, wedding
 columnist, wedding stories, wedding classifieds, wedding albums">
 
 <script language="JavaScript">
+<!--
+if (window!=top) top.location.href = location.href;
 
-function open_window(url) {
-mywin = window.open(url,"win",'toolbar=no,location=no,directories=no,status=no,menubar=no,scrollbars=yes,resizable=yes,width=400,height=300,left=10,top=0');
-}
-
-if (document.images) {
+if (document.images) {       //if image object is available     
 img1on = new Image();
-img1on.src = "/images/wedserv800_over.gif";
+img1on.src = "/images/th_wedserv2.gif";// MouseOver Images
 img2on = new Image();
-img2on.src = "/images/chitchat800_over.gif"; 
+img2on.src = "/images/th_chat2.gif"; 
 img3on = new Image();
-img3on.src = "/images/community800_over.gif";
+img3on.src = "/images/th_comm2.gif";
 img4on = new Image();
-img4on.src = "/images/ecards800_over.gif";
+img4on.src = "/images/th_ecards2.gif";
 img5on = new Image();
-img5on.src = "/images/mywedding800_over.gif";
+img5on.src = "/images/th_plan2.gif";
 img6on = new Image();
-img6on.src = "/images/contest800_over.gif";
+img6on.src = "/images/th_contest2.gif";
 
-img1off = new Image();
-img1off.src = "/images/wedserv800_out.gif";
+
+img1off = new Image();   // MouseOut Images        
+img1off.src = "/images/th_wedserv1.gif";
 img2off = new Image();        
-img2off.src = "/images/chitchat800_out.gif";
+img2off.src = "/images/th_chat1.gif";
 img3off = new Image();
-img3off.src = "/images/community800_out.gif";
+img3off.src = "/images/th_comm1.gif";
 img4off = new Image();
-img4off.src = "/images/ecards800_out.gif";
+img4off.src = "/images/th_ecards1.gif";
 img5off = new Image();
-img5off.src = "/images/mywedding800_out.gif";
+img5off.src = "/images/th_plan1.gif";
 img6off = new Image();
-img6off.src = "/images/contest800_out.gif";
+img6off.src = "/images/th_contest1.gif";
 
  }
 
@@ -60,94 +59,49 @@ function imgOff(imgName)
 	{ if (document.images) 
            { document[imgName].src = eval(imgName + "off.src");}
  }
-function govote() {
-document.pf.submit();
-}
-</script>
 
+//-->
+
+</script>
 <style type="text/css">
 <!--
 a {  text-decoration: none}
-hr {  color: #05C7C1}
-ul {  color: #009999}
 -->
 </style>
 
-
-<script language="JavaScript">
-<!-- Begin
-function right(e) {
-var msg = "All graphics are Copyright Long Island Weddings Inc.";
-if (navigator.appName == 'Netscape' && e.which == 3) {
-alert(msg);
-return false;
-}
-if (navigator.appName ==
-'Microsoft Internet Explorer' && event.button==2) {
-alert(msg);
-return false;
-}
-else return true;
-}
-function trap() {
-if(document.images)
-for(i=0;i<document.images.length;i++)
-document.images[i].onmousedown = right;
-}
-// End -->
-</script>
 </head>
 <body bgcolor="#FFFFFF" leftmargin="0" topmargin="0" rightmargin="0" bottommargin="0" marginwidth="0" marginheight="0">
-<table width="775" border="0" cellspacing="0" cellpadding="0" bgcolor="#BFEBD2">
-  <tbody><tr>
-    <td>
-      <table width="774" border="0" cellspacing="0" cellpadding="0">
-        <tbody><tr> 
-          <td width="201"><a href="/"><img src="/images/head800_logo1a.gif" width="249" height="23" border="0"></a></td>
-          <td width="574" bgcolor="#11B6D9"><img src="/images/head800_wedmagazine.gif" width="520" height="14"> 
-          </td>
-        </tr>
-        <tr>
-          <td width="201" bgcolor="#BFEBD2" valign="top"><a href="/"><img src="/images/head800_logo1b.gif" width="249" border="0" height="82"></a></td>
-          <td width="574" bgcolor="#BFEBD2">
-            <table width="100%" border="0" cellspacing="0" cellpadding="0">
-              <tbody><tr> 
-                <td><img src="/images/head800_photoscorner.gif" width="31" height="82"></td>
-                <td><img src="/images/head800_photosnaps.jpg" width="499" height="82"></td>
-              </tr>
-            </tbody></table>
-          </td>
-        </tr>
-        <tr> 
-          <td width="201" bgcolor="#BFEBD2" valign="top"><a href="/"><img src="/images/head800_logo1c.gif" width="249" height="21" border="0"></a></td>
-          <td width="574" bgcolor="#BFEBD2">
-            <table width="100%" border="0" cellspacing="0" cellpadding="0">
-              <tbody><tr>
-                <td align="right" bgcolor="#339966"><img src="/images/header800_hold.gif" width="31" height="21"></td>
-                <td><a href="/services/index.asp" onmouseover="imgOn('img1')" onmouseout="imgOff('img1')"><img src="/images/wedserv800_out.gif" width="122" height="21" border="0" name="img1" alt="Browse our directory of wedding businesses"></a></td>
-                <td><a href="/chat/index.asp" onmouseover="imgOn('img2')" onmouseout="imgOff('img2')"><img src="/images/chitchat800_out.gif" width="68" height="21" border="0" name="img2" alt="Chat with brides, vendors, newlyweds"></a></td>
-                <td><a href="/community/index.asp" onmouseover="imgOn('img3')" onmouseout="imgOff('img3')"><img src="/images/community800_out.gif" width="80" height="21" border="0" name="img3" alt="Announce engagement, ask Betty, find books, share stories"></a></td>
-                <td><a href="/ecards/index.asp" onmouseover="imgOn('img4')" onmouseout="imgOff('img4')"><img src="/images/ecards800_out.gif" width="87" height="21" border="0" name="img4" alt="Invite, thank, announce with E-PostCards"></a></td>
-                <td><a href="/mywedding/index.asp" onmouseover="imgOn('img5')" onmouseout="imgOff('img5')"><img src="/images/mywedding800_out.gif" width="84" height="21" border="0" name="img5" alt="Use Wedding Tools to plan your event"></a></td>
-                <td><a href="/contest/index.asp" onmouseover="imgOn('img6')" onmouseout="imgOff('img6')"><img src="/images/contest800_out.gif" width="59" height="21" border="0" name="img6" alt="Register for your chance to win $1000!"></a></td>
-              </tr>
-            </tbody></table>
-          </td>
-        </tr>
-       
-
-      </tbody></table>
-    </td>
-  </tr>
+<table width="780" border="0" cellspacing="0" cellpadding="0">
+	<tbody><tr>
+		<td width="66"><a href="/"><img src="/images/h_th1.jpg" width="66" height="35" border="0"></a></td>
+		<td width="190"><a href="/"><img src="/images/h_th3.gif" width="190" height="35" border="0"></a></td>
+		<td width="524"><a href="/"><img src="/images/h_th5.gif" width="524" height="35" border="0"></a></td>
+	</tr>
+	<tr>
+		<td width="66"><a href="/"><img src="/images/h_th2.jpg" width="66" height="27" border="0"></a></td>
+		<td width="190" bgcolor="#429DBC"><a href="/"><img src="/images/h_th4.gif" width="176" height="27" border="0"></a></td>
+		<td width="524" bgcolor="#429DBC">
+<table width="100%" border="0" cellspacing="0" cellpadding="0">
+	<tbody><tr>
+		<td><a href="/services/index.asp" onmouseover="imgOn('img1')" onmouseout="imgOff('img1')"><img src="/images/th_wedserv1.gif" width="126" height="27" border="0" name="img1" alt="Browse our directory of wedding businesses"></a></td>
+		<td><a href="/chat/index.asp" onmouseover="imgOn('img2')" onmouseout="imgOff('img2')"><img src="/images/th_chat1.gif" width="76" height="27" border="0" name="img2" alt="Chat with brides, vendors, newlyweds"></a></td>
+		<td><a href="/community/index.asp" onmouseover="imgOn('img3')" onmouseout="imgOff('img3')"><img src="/images/th_comm1.gif" width="89" height="27" border="0" name="img3" alt="Announce engagement, ask Betty, find books, share stories"></a></td>
+		<td><a href="/ecards/index.asp" onmouseover="imgOn('img4')" onmouseout="imgOff('img4')"><img src="/images/th_ecards1.gif" width="93" height="27" border="0" name="img4" alt="Invite, thank, announce with E-PostCards"></a></td>
+		<td><a href="/mywedding/index.asp" onmouseover="imgOn('img5')" onmouseout="imgOff('img5')"><img src="/images/th_plan1.gif" width="74" height="27" border="0" name="img5" alt="Use Wedding Tools to plan your event"></a></td>
+		<td><a href="/contest/index.asp" onmouseover="imgOn('img6')" onmouseout="imgOff('img6')"><img src="/images/th_contest1.gif" width="66" height="27" border="0" name="img6" alt="Register for your chance to win $1000!"></a></td>
+	</tr>
 </tbody></table>
-
+		</td>
+	</tr>
+	<tr bgcolor="#B6F3CE">
+		<td width="780" colspan="3" align="right"><img src="/images/h_th6.gif" width="780" height="3"></td>
+	</tr>
+</tbody></table>
 <table width="780" border="0" cellspacing="0" cellpadding="0">
   <tbody><tr> 
     <td width="600" valign="top" align="right">&nbsp; </td>
     <td width="180" align="right" height="26"><font face="Verdana, Arial, Helvetica, sans-serif" size="1"><b><a href="/mywedding/profile/pw_profile.asp"><font color="#7399A6" size="1" face="arial"><b> 
-      <script language="javascript"><!--
-;today = new Date(); weekday = today.getDay();if (weekday == 6) document.write('Saturday');if (weekday == 0) document.write('Sunday');if (weekday == 1) document.write('Monday');if (weekday == 2) document.write('Tuesday');if (weekday == 3) document.write('Wednesday');if (weekday == 4) document.write('Thursday');if (weekday == 5) document.write('Friday');document.write(', '); month = today.getMonth();if (month == 0) document.write('January');if (month == 1) document.write('Febuary');if (month == 2) document.write('March');if (month == 3) document.write('April');if (month == 4) document.write('May');if (month == 5) document.write('June');if (month == 6) document.write('July');if (month == 7) document.write('August');if (month == 8) document.write('September');if (month == 9) document.write('October');if (month == 10) document.write('November');if (month == 11) document.write('December');date = today.getDate(); year=today.getYear();document.write (' ', date, ', ',year);// --></script>Thursday, January 30, 120
-      </b></font></a></b></font>&nbsp;&nbsp;</td>
+       Friday, June 7, 2002</b></font></a></b></font>&nbsp;&nbsp;</td>
   </tr>
   <tr>
     <td width="600" valign="top"> 
@@ -243,22 +197,25 @@ United States of America <br>
 <table border="0" cellspacing="0" cellpadding="3"><tbody><tr bgcolor="#B1E4C9"><td align="center">
 	<b><font color="#006666" face="Verdana, Arial, Helvetica, sans-serif" size="1">Featured LI Vendors</font></b>
 </td></tr><tr bgcolor="#E2F5EB"><td align="center">
-<a href="/include/adlink.asp?id=93&amp;url=/services/florist/flowersbybrian/index.asp"><img src="/sponsors/flowersbybrian_side.jpg" border="0" onmouseover="window.status='Flowers By Brian'; return true" onmouseout="window.status=''; return true"></a><p><a href="/include/adlink.asp?id=86&amp;url=/services/djs/absolutedj/index.asp"><img src="/sponsors/absolutedj_side.gif" border="0" onmouseover="window.status='Absolute DJ Entertainment'; return true" onmouseout="window.status=''; return true"></a></p><p><a href="/include/adlink.asp?id=42&amp;url=/community/estories/"><img src="/sponsors/engagestories_side.gif" border="0"></a>
+<a href="/include/adlink.asp?id=114&amp;url=/services/photographers/photoverdi/index.asp"><img src="/sponsors/photoverdi_side.gif" border="0" onmouseover="window.status='Photography by Verdi'; return true" onmouseout="window.status=''; return true"></a><p><a href="/include/adlink.asp?id=60&amp;url=/services/bridalcenters/weddinggallery/index.asp"><img src="/sponsors/wedgallery_side.jpg" border="0" onmouseover="window.status='Wedding Gallery'; return true" onmouseout="window.status=''; return true"></a></p><p><a href="/include/adlink.asp?id=25&amp;url=/services/bands/"><img src="/sponsors/banner_bands.jpg" border="0"></a>
 </p></td></tr></tbody></table>
     </td>
   </tr>
 </tbody></table>
-<br><br>
+<br>
 <table width="780" border="0" cellspacing="0" cellpadding="0" bgcolor="#2B985E">
   <tbody><tr>
 	  <td width="100">&nbsp;&nbsp;&nbsp;&nbsp;<font face="Arial" size="1">Powered 
       By:<br>&nbsp;&nbsp;
-      <a href="http://www.liweb.net/" target="_blank"><img src="/include/liweb_logo.jpg" width="76" height="21" border="0" alt="Long Island Web Services, Inc."></a></font>
+      <a href="http://www.liweb.net/" target="_blank"><img src="/include/liweb_logo.jpg" width="76" height="21" border="0" alt="Long Island Weddings"></a></font>
 	  </td>
 	  <td align="center">
 	  	<a href="/copyright.asp"><font color="#FFFFFF" face="Arial" size="1">Copyright</font></a>
-		<font color="#FFFFFF" face="Arial" size="1"> © Long Island Weddings, Inc - 2001</font>
-		<br><a href="/contact/index.asp"><font color="#FFFFFF" face="Arial" size="1">Contact Us</font></a>
+		<font color="#FFFFFF" face="Arial" size="1"> © Long Island Weddings, Inc - 1995-2002</font>
+		<br>
+		<a href="/contact/index.asp"><font color="#FFFFFF" face="Arial" size="1">Contact Us</font></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;
+		<a href="/websitedesign/"><font color="#FFFFFF" face="Arial" size="1">Wedding Website Design</font></a>
 		<font size="1">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font>
 		<a href="/sitemap.asp"><font face="Arial" size="1" color="#FFFFFF">Sitemap</font></a>
 	  </td>
